@@ -35,8 +35,8 @@ subjectProfileLinePlot <- function(
 	shapePalette = NULL,
 	paramGroupVar = NULL,
 	timeVar, 
-	subjectVar = "USUBJID",
-	subsetVar = NULL, subsetValue = NULL,
+	subjectVar = "USUBJID", subjectSubset = NULL,
+	subsetData = NULL, subsetVar = NULL, subsetValue = NULL, 
 	xLab = getLabelVar(timeVar, labelVars = labelVars),
 	yLab = "",
 	timeLim = NULL,
@@ -53,9 +53,13 @@ subjectProfileLinePlot <- function(
 	data <- data[with(data, !is.na(yVar) & yVar != "" & !is.na(get(timeVar))), ]
 	
 	# only keep records of interest
-	data <- filterData(data, 
+	data <- filterData(
+		data = data, 
+		subsetData = subsetData,
 		subsetVar = subsetVar, 
-		subsetValue = subsetValue
+		subsetValue = subsetValue,
+		subjectVar = subjectVar, 
+		subjectSubset = subjectSubset
 	)
 	
 	# format variable
